--- a/src/PublicAdmin/src/app/administration/users/detail/user-detail-guilds/user-detail-guilds.component.html
+++ b/src/PublicAdmin/src/app/administration/users/detail/user-detail-guilds/user-detail-guilds.component.html
@@ -69,10 +69,7 @@
             <h6 class="mb-0">Použitá pozvánka</h6>
             <b>
                 {{guild.usedInvite.code}}
-                <ng-container *ngIf="guild.usedInvite.creator">
-                    (<a routerLink="/admin/users/{{guild.usedInvite.creator.id}}"
-                        class="text-dark">{{guild.usedInvite.creator.username}}</a>)
-                </ng-container>
+                <ng-container *ngIf="guild.usedInvite.creator">({{guild.usedInvite.creator.username}})</ng-container>
                 <ng-container *ngIf="guild.usedInvite.createdAt">({{guild.usedInvite.createdAt.toLocaleString()}})
                 </ng-container>
             </b>
