--- a/src/PrivateAdmin/src/app/administration/emote-suggestions/suggestions-list/list/list.component.html
+++ b/src/PrivateAdmin/src/app/administration/emote-suggestions/suggestions-list/list/list.component.html
@@ -21,8 +21,7 @@
                     <td>{{item.id}}</td>
                     <td>{{item.createdAt.binding}}</td>
                     <td>
-                        <a routerLink="/admin/users/{{item.fromUser.id}}" class="text-dark"
-                            (click)="$event.stopPropagation()">{{item.fromUser.displayName}}</a>
+                        <a user-link [userEntity]="item.fromUser" (click)="$event.stopPropagation()"></a>
                     </td>
                     <td>{{item.emoteName}}</td>
                     <td>
