--- a/src/PrivateAdmin/src/app/administration/points/users/list/list.component.html
+++ b/src/PrivateAdmin/src/app/administration/points/users/list/list.component.html
@@ -18,7 +18,7 @@
                         <a routerLink="/admin/servers/{{item.guild.id}}" class="text-dark">{{item.guild.name}}</a>
                     </td>
                     <td>
-                        <a routerLink="/admin/users/{{item.user.id}}" class="text-dark">{{item.user.displayName}}</a>
+                        <a user-link [userEntity]="item.user"></a>
                     </td>
                     <td>{{item.activePoints | numberWithSpaces}}</td>
                     <td>{{item.expiredPoints | numberWithSpaces}}</td>
