Implemented user measures to the private GUI

--- a/src/PrivateAdmin/src/app/administration/users/detail/user-detail-guilds/user-detail-guilds.component.scss
+++ b/src/PrivateAdmin/src/app/administration/users/detail/user-detail-guilds/user-detail-guilds.component.scss
@@ -25,3 +25,10 @@
         grid-template-columns: 1fr;
     }
 }
+
+pre.userMeasures {
+    margin: 0;
+    word-wrap: break-word;
+    white-space: pre-wrap;
+    overflow-wrap: anywhere;
+}
