Fixed missing bots in search component

--- a/src/PrivateAdmin/src/app/administration/audit-log/filter/extended-filters/message-deleted-filter/message-deleted-filter.component.html
+++ b/src/PrivateAdmin/src/app/administration/audit-log/filter/extended-filters/message-deleted-filter/message-deleted-filter.component.html
@@ -22,7 +22,7 @@
             <div class="col-md-3 d-flex align-items-center">Autor zprávy</div>
 
             <div class="col-md">
-                <app-search-input [searchSource]="'users'" formControlName="authorId"></app-search-input>
+                <app-search-input [searchSource]="'users-all'" formControlName="authorId"></app-search-input>
             </div>
         </div>
     </form>
