--- a/src/PrivateAdmin/src/app/administration/audit-log/filter/filter.component.html
+++ b/src/PrivateAdmin/src/app/administration/audit-log/filter/filter.component.html
@@ -19,7 +19,7 @@
 
             <div class="col-md form-group">
                 <label>Uživatel</label>
-                <app-search-input [searchSource]="'users'" formControlName="userIds" [isMultiSelect]="true"
+                <app-search-input [searchSource]="'users-all'" formControlName="userIds" [isMultiSelect]="true"
                     [guildId]="guildId"></app-search-input>
             </div>
         </div>
