--- a/src/PrivateAdmin/src/app/administration/reminders/filter/filter.component.html
+++ b/src/PrivateAdmin/src/app/administration/reminders/filter/filter.component.html
@@ -3,12 +3,12 @@
         <div class="row">
             <div class="col-md form-group">
                 <label>Odesílatel</label>
-                <app-search-input [searchSource]="'users'" formControlName="fromUserId"></app-search-input>
+                <app-search-input [searchSource]="'users-all'" formControlName="fromUserId"></app-search-input>
             </div>
 
             <div class="col-md form-group">
                 <label>Příjemce</label>
-                <app-search-input [searchSource]="'users'" formControlName="toUserId"></app-search-input>
+                <app-search-input [searchSource]="'users-all'" formControlName="toUserId"></app-search-input>
             </div>
 
             <div class="col-md form-group">
