--- a/src/PrivateAdmin/src/app/administration/unverify/filter/filter.component.html
+++ b/src/PrivateAdmin/src/app/administration/unverify/filter/filter.component.html
@@ -14,12 +14,12 @@
 
             <div class="col-md form-group">
                 <label>Akci provedl</label>
-                <app-search-input [searchSource]="'users'" formControlName="fromUserId" [guildId]="guildId"></app-search-input>
+                <app-search-input [searchSource]="'users-all'" formControlName="fromUserId" [guildId]="guildId"></app-search-input>
             </div>
 
             <div class="col-md form-group">
                 <label>Cílový uživatel</label>
-                <app-search-input [searchSource]="'users'" formControlName="toUserId" [guildId]="guildId"></app-search-input>
+                <app-search-input [searchSource]="'users-all'" formControlName="toUserId" [guildId]="guildId"></app-search-input>
             </div>
         </div>
 
