--- a/src/PrivateAdmin/src/app/administration/emote-suggestions/suggestions-list/filter/filter.component.html
+++ b/src/PrivateAdmin/src/app/administration/emote-suggestions/suggestions-list/filter/filter.component.html
@@ -18,7 +18,7 @@
 
             <div class="col-md form-group">
                 <label>Navrhovatel</label>
-                <app-search-input [searchSource]="'users'" formControlName="fromUserId" [guildId]="guildId"></app-search-input>
+                <app-search-input [searchSource]="'users-no-bots'" formControlName="fromUserId" [guildId]="guildId"></app-search-input>
             </div>
         </div>
 
