--- a/src/PrivateAdmin/src/app/administration/invites/invites-list/filter/filter.component.html
+++ b/src/PrivateAdmin/src/app/administration/invites/invites-list/filter/filter.component.html
@@ -18,7 +18,7 @@
             <div class="col-md">
                 <div class="form-group">
                     <label>Zakladatel</label>
-                    <app-search-input [searchSource]="'users'" formControlName="creatorId" [guildId]="guildId"></app-search-input>
+                    <app-search-input [searchSource]="'users-all'" formControlName="creatorId" [guildId]="guildId"></app-search-input>
                 </div>
             </div>
 
