--- a/src/PrivateAdmin/src/app/administration/points/service/actions/increment-points/increment-points.component.html
+++ b/src/PrivateAdmin/src/app/administration/points/service/actions/increment-points/increment-points.component.html
@@ -8,7 +8,7 @@
 
             <div class="col-md form-group">
                 <label>Cílový uživatel</label>
-                <app-search-input [guildId]="guildId" [searchSource]="'users'" formControlName="toUserId"></app-search-input>
+                <app-search-input [guildId]="guildId" [searchSource]="'users-no-bots'" formControlName="toUserId"></app-search-input>
             </div>
         </div>
 
