--- a/src/PrivateAdmin/src/app/administration/searching/filter/filter.component.html
+++ b/src/PrivateAdmin/src/app/administration/searching/filter/filter.component.html
@@ -13,7 +13,7 @@
 
             <div class="col-md form-group">
                 <label>Uživatel</label>
-                <app-search-input [searchSource]="'users'" formControlName="userId" [guildId]="guildId"></app-search-input>
+                <app-search-input [searchSource]="'users-all'" formControlName="userId" [guildId]="guildId"></app-search-input>
             </div>
 
             <div class="col-md form-group">
