--- a/src/PrivateAdmin/src/app/shared/search-input/search-input.component.html
+++ b/src/PrivateAdmin/src/app/shared/search-input/search-input.component.html
@@ -5,24 +5,14 @@
         <div class="ng-value" *ngIf="items.length > 1">
             <span class="ng-value-template p-1">
                 {{items.length}}
-                <ng-container *ngIf="searchSource === 'bots'">
-                    <ng-container *ngIf="items.length > 1 && items.length < 5">boti</ng-container>
-                    <ng-container *ngIf="items.length >= 5">botů</ng-container>
-                </ng-container>
-
-                <ng-container *ngIf="searchSource === 'channels'">
-                    <ng-container *ngIf="items.length > 1 && items.length < 5">kanály</ng-container>
-                    <ng-container *ngIf="items.length >= 5">kanálů</ng-container>
-                </ng-container>
-
-                <ng-container *ngIf="searchSource === 'commands'">
-                    <ng-container *ngIf="items.length > 1 && items.length < 5">příkazy</ng-container>
-                    <ng-container *ngIf="items.length >= 5">příkazů</ng-container>
-                </ng-container>
-
                 <ng-container *ngIf="searchSource === 'guilds'">
                     <ng-container *ngIf="items.length > 1 && items.length < 5">servery</ng-container>
                     <ng-container *ngIf="items.length >= 5">serverů</ng-container>
+                </ng-container>
+
+                <ng-container *ngIf="searchSource === 'channels' || searchSource === 'channels-no-threads'">
+                    <ng-container *ngIf="items.length > 1 && items.length < 5">kanály</ng-container>
+                    <ng-container *ngIf="items.length >= 5">kanálů</ng-container>
                 </ng-container>
 
                 <ng-container *ngIf="searchSource === 'roles'">
@@ -30,7 +20,12 @@
                     <ng-container *ngIf="items.length >= 5">rolí</ng-container>
                 </ng-container>
 
-                <ng-container *ngIf="searchSource === 'users'">
+                <ng-container *ngIf="searchSource === 'users-only-bots'">
+                    <ng-container *ngIf="items.length > 1 && items.length < 5">boti</ng-container>
+                    <ng-container *ngIf="items.length >= 5">botů</ng-container>
+                </ng-container>
+
+                <ng-container *ngIf="searchSource === 'users-no-bots' || searchSource === 'users-all'">
                     <ng-container *ngIf="items.length > 1 && items.length < 5">uživatelé</ng-container>
                     <ng-container *ngIf="items.length >= 5">uživatelů</ng-container>
                 </ng-container>
