--- a/src/PrivateAdmin/src/app/administration/statistics/audit-log/audit-log.component.html
+++ b/src/PrivateAdmin/src/app/administration/statistics/audit-log/audit-log.component.html
@@ -3,10 +3,28 @@
     <app-bar-chart [data]="stats.byType"></app-bar-chart>
     <h3 class="fw-normal">Podle období</h3>
     <app-line-chart [data]="stats.byDate"></app-line-chart>
-    <h3 class="fw-normal">Počet souborů</h3>
-    <app-bar-chart [data]="stats.fileCounts"></app-bar-chart>
-    <h3 class="fw-normal">Objem souborů</h3>
-    <app-bar-chart [data]="stats.fileSizes"></app-bar-chart>
+
+    <h3 class="fw-normal">Soubory</h3>
+    <div class="row">
+        <div class="col-md" *ngFor="let item of toColumns(stats.fileExtensionStatistics, 3)">
+            <table class="table table-sm table-striped auto-column-width">
+                <thead>
+                    <tr>
+                        <th>Přípona</th>
+                        <th>Počet</th>
+                        <th>Velikost</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr *ngFor="let row of item">
+                        <td>{{row.extension}}</td>
+                        <td>{{row.count | numberWithSpaces}}</td>
+                        <td>{{row.size | filesize}}</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </div>
 </ng-container>
 
 <ng-template #loading>
