--- a/src/PrivateAdmin/src/app/administration/guilds/guild-detail/guild-detail.component.html
+++ b/src/PrivateAdmin/src/app/administration/guilds/guild-detail/guild-detail.component.html
@@ -112,6 +112,8 @@
                             [value]="data.databaseReport.emoteSuggestions | numberWithSpaces"></div>
                         <div keyValueItem class="col-md-auto" [key]="'Body (transakce)'"
                             [value]="data.databaseReport.pointTransactions | numberWithSpaces"></div>
+                        <div keyValueItem class="col-md-auto" [key]="'Uživatelská opatření'"
+                            [value]="data.databaseReport.userMeasures | numberWithSpaces"></div>
                     </div>
                 </ng-container>
             </app-card>
