--- a/src/PrivateAdmin/src/app/administration/auto-reply/list/list.component.scss
+++ b/src/PrivateAdmin/src/app/administration/auto-reply/list/list.component.scss
@@ -5,3 +5,12 @@ list-button {
 .buttons {
     min-width: 100px;
 }
+
+.badge {
+    margin-left: 5px;
+}
+
+.alert {
+    overflow: hidden;
+    text-wrap: balance;
+}
