Added missing condition

--- a/src/PrivateAdmin/src/app/administration/user-measures/user-measures-list/list/list.component.html
+++ b/src/PrivateAdmin/src/app/administration/user-measures/user-measures-list/list/list.component.html
@@ -52,7 +52,7 @@
                 Server:
                 <b>
                     <a routerLink="/admin/servers/{{item.guild.id}}" class="text-dark" *ngIf="item.guild">{{item.guild.name}}</a>
-                    <span>Neznámý server</span>
+                    <span *ngIf="!item.guild">Neznámý server</span>
                 </b>
             </p>
         </div>
