--- a/src/PrivateAdmin/src/app/shared/card/card.component.html
+++ b/src/PrivateAdmin/src/app/shared/card/card.component.html
@@ -1,5 +1,5 @@
 <div class="card {{size}}" [ngClass]="classes" [ngStyle]="{'max-width': maxWidth}">
-    <div class="card-header" *ngIf="header" (click)="toggleVisiblity()">
+    <div class="card-header" *ngIf="header" (click)="toggleVisiblity($event)">
         <div class="d-flex justify-content-between align-items-center">
             <h4>
                 <i [class]="icon" *ngIf="icon"></i>
@@ -9,7 +9,7 @@
             <div>
                 <small *ngIf="recordsCount != undefined">Počet záznamů: {{recordsCount}}</small>
 
-                <button class="btn btn-link p-0 no-print" *ngIf="allowHideButton" (click)="toggleVisiblity()">
+                <button class="btn btn-link p-0 no-print" *ngIf="allowHideButton" (click)="toggleVisiblity($event)">
                     <ng-container *ngIf="visible">Skrýt</ng-container>
                     <ng-container *ngIf="!visible">Zobrazit</ng-container>
                 </button>
